# github-commit-status

./: .dockerignore  .gitignore  .readthedocs.yml  .travis.yml  AUTHORS.rst  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  Dockerfile.3.7.7  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  appveyor.yml  develop_requirements.txt  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_dev.txt  requirements_graph.txt  setup.cfg  setup.py  tox.ini
.circleci-legacy/: config-legacy.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: ISSUE_TEMPLATE.md
.github/workflows/: tests.yml
docker_tests/: Dockerfile.3.5.9  Dockerfile.3.6.10
docs/: Makefile  authors.md  conf.py  contributing.md  github_commit_status.md  github_commit_status.rst  index.md  index.rst  installation.md  installation.rst  make.bat  readme.md  usage.md  usage.rst
githooks/: pre-commit
github_commit_status/: __init__.py  cli.py
requirements/: development.txt  freeze.txt  graph.txt  requirements.txt
tests/: __init__.py  test_github_commit_status.py
