[tool.poetry]
name = "github_commit_status"
version = "1.3.0"
description = "A simple command line for updating a commit's status on GitHub"
authors = [
    "Glen Jarvis <<glen@glenjarvis.com>>"
]

license = "MIT"
readme = 'README.md'  # Updated to use Markdown

repository = "https://github.com/glenjarvis/github_commit_status"
homepage = "https://github.com/glenjarvis/github_commit_status"
keywords = ['git', 'github', 'commit', 'github_commit_status']

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
toml = "^0.10"
click = "^8.0"
pygithub = "^1.51"

[tool.poetry.group.dev.dependencies]
poetry = "^2.2"
pytest = ">5"
flake8 = "^4.0"
tox = "^3.14"
coverage = "^6.0"
mkdocs = "^1.5"
mkdocs-material = "^9.4"
mkdocstrings-python = "^1.7"

[tool.poetry.scripts]
github_commit_status = "github_commit_status.cli:cli"
gcs = "github_commit_status.cli:cli"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.masonry.api"

