[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "github_commit_status"
version = "1.4.0"
description = "A simple command line for updating a commit's status on GitHub"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Glen Jarvis", email = "glen@glenjarvis.com" }
]
requires-python = ">=3.10"
keywords = ["git", "github", "commit", "github_commit_status"]
dependencies = [
    "toml>=0.10",
    "click>=8.0",
    "pygithub>=1.51",
]

[project.optional-dependencies]
dev = [
    "pytest>5",
    "pylint>=2.0",
    "black>=22.0",
    "tox>=3.14",
    "coverage>=6.0",
    "mkdocs>=1.5",
    "mkdocs-material>=9.4",
    "mkdocstrings-python>=1.7",
    "pip-tools>=7.0",
    "twine>=4.0",
]

[project.scripts]
github_commit_status = "github_commit_status.cli:cli"
gcs = "github_commit_status.cli:cli"

[project.urls]
Repository = "https://github.com/glenjarvis/github_commit_status"
Homepage = "https://github.com/glenjarvis/github_commit_status"

