[project]
name = "github-commit-status"
version = "1.5.0"
description = "A simple command line for updating a commit's status on GitHub"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Glen Jarvis", email = "glen@glenjarvis.com" }
]
requires-python = ">=3.10"
keywords = ["git", "github", "commit", "github_commit_status"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "click>=8.0",
    "pygithub>=1.51",
]

[dependency-groups]
dev = [
    "pytest>5",
    "pylint>=2.0",
    "black>=22.0",
    "tox>=3.14",
    "coverage>=6.0",
    "mkdocs>=1.5",
    "mkdocs-material>=9.4",
    "mkdocstrings-python>=1.7",
]

[project.scripts]
github-commit-status = "github_commit_status.cli:cli"
gcs = "github_commit_status.cli:cli"

[project.urls]
Repository = "https://github.com/glenjarvis/github-commit-status"
Homepage = "https://github.com/glenjarvis/github-commit-status"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "/github_commit_status",
    "/tests",
    "/requirements",
    "/docs",
    "/mkdocs.yml",
    "/README.md",
    "/LICENSE",
    "/Makefile",
    "/pyproject.toml",
]
